# negative-film-tools

./: .gitignore  .gitmodules  Brewfile  Pipfile  README.md  action.bash  bw.scr  bw.txt  bw_acros.txt  bw_c41.scr  bw_c41.txt  bw_c41_2.txt  bw_pan.scr  bw_pan.txt  bw_pan2.txt  bw_pan_2.txt  c41_bw.txt  c41_bw_clahe.txt  c41_bw_soft.txt  cn.scr  cn.txt  cn_clahe.txt  cn_gamma.txt  cn_lm.scr  cn_lm.txt  cn_modern.scr  cn_modern.txt  cn_old.scr  cn_old.txt  cn_simple.txt  cn_wb.scr  color_negative.txt  color_negative_clahe.txt  color_negative_colorcorrection.txt  color_negative_gamma.txt  color_negative_global_fuji.txt  color_negative_lowcontrast.txt  color_negative_normalize.txt  color_negative_outof_exposure.txt  color_negative_pro.txt  (+34 more)
negfix8/: .gitignore  Brewfile  install.sh
python/: .gitignore  Pipfile  process.bash  process.py  test.py
