[tool.poetry]
name = "negative-film-tools"
version = "0.1.0"
description = ""
authors = ["Takeo Kunishima <t.kunishi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
imageio = "*"
scikit-image = "*"
tifffile = "*"
rawpy = "*"
piexif = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
