[tool.poetry]
name = "negative-film-tools"
version = "0.1.0"
description = ""
authors = ["Takeo Kunishima <t.kunishi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
imageio = "*"
scikit-image = "*"
tifffile = "*"
piexif = "^1.1.3"
numpy = "^1.21.4"
rawpy = {path = "../rawpy"}
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
