[tool.poetry]
name = "negative-film-tools"
version = "0.1.0"
description = ""
authors = ["Takeo Kunishima <t.kunishi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.14"
imageio = "*"
scikit-image = "*"
tifffile = "*"
piexif = "^1.1.3"
numpy = "^1.21.4"
Pillow = ">=12.2.0"
scipy = "^1.11.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
